# dtm-differ

./: .gitignore  LICENSE  Makefile  README.md  logs.sqlite  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: methodology.md
src/dtm_differ/: __init__.py  cli.py  constants.py  db.py  generate_test_dtms.py  geotiff.py  raster.py  report.py  storage.py  types.py  viz.py
src/dtm_differ/pipeline/: __init__.py  stages.py  types.py
src/dtm_differ/templates/: base.html  report.html
src/dtm_differ/templates/partials/: _confidence.html  _image_card.html  _processing_info.html  _statistics.html
src/tests/: conftest.py  test_db.py  test_geotiff.py  test_pipeline_stages.py  test_pipeline_with_scenarios.py  test_raster.py  test_report.py  test_storage.py  test_viz.py
test_data/sample_dtms/: scenario1_dem_a.tif  scenario1_dem_b.tif  scenario2_dem_a.tif  scenario2_dem_b.tif  scenario3_dem_a.tif  scenario3_dem_b.tif  scenario4_dem_a.tif  scenario4_dem_b.tif  scenario5_dem_a.tif  scenario5_dem_b.tif  scenario6_dem_a.tif  scenario6_dem_b.tif  scenario7_dem_a.tif  scenario7_dem_b.tif  scenario8_dem_a.tif  scenario8_dem_b.tif
